--- a/Second-repo/newIndex.html
+++ b/Second-repo/newIndex.html
@@ -16,6 +16,9 @@
     </h2>
     <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut rerum veniam alias consequatur nisi quaerat!</h3>
     <p class="new">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta accusamus perspiciatis debitis ex numquam? Qui dicta eum ratione maiores, corporis nostrum accusantium excepturi eveniet. Voluptates libero excepturi laboriosam molestiae, quibusdam ad similique, dolorum nam quia rerum officiis tempore ratione voluptatem veritatis odio vel accusantium architecto quasi. Commodi, deserunt in dolorum mollitia qui quisquam, eius modi voluptas, sapiente quibusdam obcaecati enim veniam corporis. Exercitationem consectetur facere tempora accusamus numquam velit quis aliquid beatae eligendi atque perferendis, fugiat harum dolor molestias doloribus inventore quos id quod, iusto voluptatum libero nihil eum vero natus. Quia nisi ea quas molestiae dolorem non praesentium, illum architecto quae excepturi ullam natus rem at laboriosam nihil, enim quasi consequatur fuga repellendus laudantium perspiciatis libero necessitatibus officiis perferendis.</p>
+    <img src="Lana.jpg" alt="">
+    <img src="Morning.jpg" alt="">
+    <img src="Nature.jpg" alt="">
     
 </body>
 </html>
